[gd_scene load_steps=14 format=2]

[ext_resource path="res://BulletImpact.gd" type="Script" id=1]
[ext_resource path="res://tiles/Blood drop.png" type="Texture" id=2]
[ext_resource path="res://sound/Bullet-Hit-Body-Flesh 04.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.392 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 8

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=4]
width = 32
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.9
angular_velocity = 2.8026e-044
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
damping_random = 1.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = -1.0
hue_variation_random = 0.02

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.311828, 1 )
colors = PoolColorArray( 1, 1, 1, 0.470588, 1, 1, 1, 0.25098, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 8

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.0379989, 0.582338 ), 0.0, -0.60534, 0, 1, Vector2( 1, 0 ), -0.60534, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=9]
width = 32
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
angular_velocity = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -50.0
scale = 2.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[node name="BulletImpact" type="Node2D"]
script = ExtResource( 1 )

[node name="SolidImpact" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.862745 )
emitting = false
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
fract_delta = false
visibility_rect = Rect2( 0, -15, 30, 30 )
local_coords = false
process_material = SubResource( 5 )

[node name="FleshImpact" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
fract_delta = false
visibility_rect = Rect2( 0, -15, 30, 30 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
max_distance = 3000.0
attenuation = 2.0
bus = "Effects"
area_mask = 1048575

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
